--- a/Tenant Onboarding Solution/Src/Details Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Details Screen_1.fx.yaml
@@ -66,6 +66,78 @@
                 Width: =Parent.Width
                 ZIndex: =3
 
+                Container38_9 As groupContainer.horizontalAutoLayoutContainer:
+                    Fill: =RGBA(255, 255, 255, 1)
+                    FillPortions: =0
+                    Height: =70
+                    LayoutAlignItems: =LayoutAlignItems.Center
+                    LayoutGap: =10
+                    LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
+                    LayoutMinHeight: =0
+                    LayoutMinWidth: =0
+                    LayoutMode: =LayoutMode.Auto
+                    PaddingLeft: =18
+                    PaddingRight: =10
+                    ZIndex: =1
+
+                    Container59_5 As groupContainer.manualLayoutContainer:
+                        AlignInContainer: =AlignInContainer.Center
+                        FillPortions: =0
+                        Height: =Parent.Height - 25
+                        LayoutMinHeight: =0
+                        LayoutMinWidth: =250
+                        Width: =25
+                        ZIndex: =1
+
+                        Icon2_3 As icon.ArrowLeft:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =App.Theme.Colors.Darker30
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(244, 244, 244, 1)
+                            Height: =Parent.Height
+                            Icon: =Icon.ArrowLeft
+                            Width: =Parent.Width
+                            ZIndex: =1
+
+                        Button11_5 As button:
+                            BorderColor: =App.Theme.Colors.Primary
+                            BorderStyle: =BorderStyle.None
+                            Color: =RGBA(0, 0, 0, 0)
+                            DisabledBorderColor: =RGBA(244, 244, 244, 1)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            DisabledFill: =RGBA(244, 244, 244, 1)
+                            Fill: =Color.Transparent
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =Parent.Height
+                            HoverBorderColor: =App.Theme.Colors.Darker10
+                            HoverFill: =Self.Fill
+                            OnSelect: =Navigate('Home Screen')
+                            PressedBorderColor: =App.Theme.Colors.Darker40
+                            PressedColor: =Self.Color
+                            PressedFill: =Self.Fill
+                            RadiusBottomLeft: =0
+                            RadiusBottomRight: =0
+                            RadiusTopLeft: =0
+                            RadiusTopRight: =0
+                            Size: =15
+                            Text: =
+                            Width: =Parent.Width
+                            ZIndex: =2
+
+                    Label15_9 As label:
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Color: =RGBA(0, 0, 0, 1)
+                        DisabledColor: =RGBA(166, 166, 166, 1)
+                        FillPortions: =1
+                        Font: =App.Theme.Font
+                        FontWeight: =FontWeight.Bold
+                        LayoutMinWidth: =0
+                        Size: =13
+                        Text: =record.'Name of Prospective Tenant'
+                        Width: =Parent.Width
+                        ZIndex: =2
+
                 Canvas1_2 As fluidGrid.fluidGridWithBlankCard:
                     BorderThickness: =0
                     Fill: =RGBA(255, 255, 255, 1)
@@ -74,7 +146,7 @@
                     LayoutMinWidth: =100
                     Width: =Parent.Width
                     Y: =RectQuickActionBar1.Y + RectQuickActionBar1.Height
-                    ZIndex: =4
+                    ZIndex: =2
 
                     DataCard1_2 As dataCard:
                         BorderColor: =RGBA(0, 0, 0, 1)
@@ -158,7 +230,7 @@
                     LayoutMode: =LayoutMode.Auto
                     PaddingLeft: =18
                     PaddingRight: =10
-                    ZIndex: =53
+                    ZIndex: =3
 
                     Label15_8 As label:
                         BorderColor: =App.Theme.Colors.Darker40
