--- a/Tenant Onboarding Solution/Src/Details Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Details Screen_1.fx.yaml
@@ -224,6 +224,6 @@
         NoAction: |-
             =UpdateContext({showPopUp:false})
         Visible: =showPopUp
-        YesAction: =Navigate('Mail Screen',ScreenTransition.CoverRight)
+        YesAction: =//send generated docment
         ZIndex: =4
 
