--- a/Tenant Onboarding Solution/Src/Details Screen_1.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Details Screen_1.fx.yaml
@@ -219,6 +219,6 @@
         NoAction: |-
             =UpdateContext({showPopUp:false})
         Visible: =showPopUp
-        YesAction: =//send generated docment
+        YesAction: =
         ZIndex: =4
 
