--- a/Tenant Onboarding Solution/CanvasManifest.json
+++ b/Tenant Onboarding Solution/CanvasManifest.json
@@ -103,7 +103,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 703,
+    "BindingErrorCount": 191,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
     "DocumentAppType": "DesktopOrTablet",
@@ -139,11 +139,7 @@
   "ScreenOrder": [
     "Home Screen",
     "Details Screen",
-    "Details Screen_1",
     "Mail Screen",
-    "Policies Screen",
-    "Renewal Request screen",
-    "Initiator Starting Screen",
-    "Screen1"
+    "Policies Screen"
   ]
 }
