--- a/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
+++ b/Tenant Onboarding Solution/Src/Mail Screen.fx.yaml
@@ -2,7 +2,10 @@
     Fill: =Color.White
     LoadingSpinnerColor: =App.Theme.Colors.Primary
 
-    Container13_5 As groupContainer.horizontalAutoLayoutContainer:
+    LoadingImageHome_2 As Loading:
+        Visible: =showLoading
+
+    Container13_7 As groupContainer.horizontalAutoLayoutContainer:
         Fill: |
             =RGBA(248, 248, 248, 1)
         Height: =Parent.Height
@@ -10,131 +13,230 @@
         Width: =Parent.Width
         ZIndex: =1
 
-        Container17_5 As groupContainer.verticalAutoLayoutContainer:
+        Navigator_6 As Navigator:
+            Height: =Parent.Height * 90/100
+            LayoutMinHeight: =640
+            LayoutMinWidth: =640
+            LogOutScreen: =
+            MenuItem: |-
+                =Table(
+                    {
+                        MenuID: 1,
+                        MenuIcon: "<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-grid-3x3-gap' viewBox='0 0 16 16'>
+                  <path d='M4 2v2H2V2zm1 12v-2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V7a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m5 10v-2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V7a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1M9 2v2H7V2zm5 0v2h-2V2zM4 7v2H2V7zm5 0v2H7V7zm5 0h-2v2h2zM4 12v2H2v-2zm5 0v2H7v-2zm5 0v2h-2v-2zM12 1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm-1 6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm1 4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1z'/>
+                </svg>",
+                        MenuName: "Home",
+                        PageNavigation: 'Mail Screen'
+                    },
+                    {
+                        MenuID: 2,
+                        MenuIcon: "<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-grid-3x3-gap' viewBox='0 0 16 16'>
+                  <path d='M4 2v2H2V2zm1 12v-2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V7a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m5 10v-2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V7a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1M9 2v2H7V2zm5 0v2h-2V2zM4 7v2H2V7zm5 0v2H7V7zm5 0h-2v2h2zM4 12v2H2v-2zm5 0v2H7v-2zm5 0v2h-2v-2zM12 1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm-1 6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm1 4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1z'/>
+                </svg>",
+                        MenuName: "Requests",
+                        PageNavigation: 'Policies Screen'
+                    },
+                    {
+                        MenuID: 3,
+                        MenuIcon: "<svg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-grid-3x3-gap' viewBox='0 0 16 16'>
+                  <path d='M4 2v2H2V2zm1 12v-2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V7a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m5 10v-2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V7a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1m0-5V2a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1M9 2v2H7V2zm5 0v2h-2V2zM4 7v2H2V7zm5 0v2H7V7zm5 0h-2v2h2zM4 12v2H2v-2zm5 0v2H7v-2zm5 0v2h-2v-2zM12 1a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm-1 6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm1 4a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1z'/>
+                </svg>",
+                        MenuName: "Renewal Requests",
+                        PageNavigation: 'Renewal Request screen'
+                    }
+                )
+            OnSelect: ="Text"
+            ZIndex: =1
+
+        Container17_7 As groupContainer.verticalAutoLayoutContainer:
             Height: =Parent.Height
             LayoutDirection: =LayoutDirection.Vertical
             LayoutMinHeight: =0
             LayoutMinWidth: =0
             LayoutMode: =LayoutMode.Auto
+            Width: =Parent.Width
             ZIndex: =2
 
-            component_Header_6 As component_Header:
-                AlignInContainer: =AlignInContainer.Stretch
-                LayoutMinHeight: =640
-                LayoutMinWidth: =0
-                NoficationBellOnSelect: =
-                Tooltip: ="You have some pending requests awaiting approval "
-                Width: =
-
-            Container32_5 As groupContainer.verticalAutoLayoutContainer:
+            Container32_7 As groupContainer.verticalAutoLayoutContainer:
                 LayoutDirection: =LayoutDirection.Vertical
-                LayoutGap: =10
+                LayoutGap: =5
                 LayoutMinHeight: =0
                 LayoutMinWidth: =0
                 LayoutMode: =LayoutMode.Auto
-                PaddingBottom: =20
                 PaddingLeft: =20
-                PaddingRight: =25
-                PaddingTop: =20
                 Width: =Parent.Width
                 ZIndex: =3
 
-                Container34_5 As groupContainer.verticalAutoLayoutContainer:
-                    FillPortions: =0
-                    Height: =50
-                    LayoutDirection: =LayoutDirection.Vertical
-                    LayoutMinHeight: =100
-                    LayoutMinWidth: =250
-                    LayoutMode: =LayoutMode.Auto
-                    ZIndex: =4
-
-                    Container35_2 As groupContainer.horizontalAutoLayoutContainer:
-                        Fill: =RGBA(255, 255, 255, 1)
-                        FillPortions: =1.5
-                        LayoutMinHeight: =0
-                        LayoutMinWidth: =0
-                        LayoutMode: =LayoutMode.Auto
-                        ZIndex: =5
-
-                        Container38_5 As groupContainer.horizontalAutoLayoutContainer:
-                            Height: =Parent.Height
-                            LayoutAlignItems: =LayoutAlignItems.Center
-                            LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
-                            LayoutMinHeight: =0
-                            LayoutMinWidth: =0
-                            LayoutMode: =LayoutMode.Auto
-                            PaddingLeft: =2
-                            PaddingRight: =10
-                            ZIndex: =6
-
-                            Arrow1_1 As arrow.backArrow:
-                                BorderColor: =App.Theme.Colors.Darker40
-                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
-                                Fill: =RGBA(85, 69, 191, 1)
-                                Height: =40
-                                OnSelect: =Back()
-                                Width: =40
-                                ZIndex: =7
-
-                            Label15_5 As label:
-                                BorderColor: =App.Theme.Colors.Darker40
-                                Color: =RGBA(0, 0, 0, 1)
-                                DisabledColor: =RGBA(166, 166, 166, 1)
-                                FillPortions: =1
-                                Font: =App.Theme.Font
-                                FontWeight: =FontWeight.Bold
-                                LayoutMinWidth: =0
-                                Size: =13
-                                Text: =record.'Name of Prospective Tenant'
-                                Width: =Parent.Width
-                                ZIndex: =8
-
-                Container37_5 As groupContainer.verticalAutoLayoutContainer:
+                Container38_9 As groupContainer.horizontalAutoLayoutContainer:
                     Fill: =RGBA(255, 255, 255, 1)
-                    LayoutDirection: =LayoutDirection.Vertical
+                    FillPortions: =0
+                    Height: =70
+                    LayoutAlignItems: =LayoutAlignItems.Center
+                    LayoutGap: =10
+                    LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                     LayoutMinHeight: =0
                     LayoutMinWidth: =0
                     LayoutMode: =LayoutMode.Auto
-                    PaddingBottom: =10
-                    PaddingTop: =10
-                    ZIndex: =9
+                    PaddingLeft: =18
+                    PaddingRight: =10
+                    ZIndex: =1
 
-                    RichTextEditor1 As richTextEditor:
-                        AlignInContainer: =AlignInContainer.Stretch
-                        BorderColor: =App.Theme.Colors.Darker40
-                        Default: |-
-                            ="<p>Dear "&record.'Name of Prospective Tenant'&",</p><p>We are pleased to inform you that your request to rent an apartment at <a href = 'https://google.com'>address</a> has been approved. Please <a href = 'https:google.com'>click here</a> to see the details of the estate rule and <a href = 'https://google.com'>here</a> to see the payment details</p><p>You can reach us on 07068756477 or reply this mail</p><p>Regards</p>"
-                        FillPortions: =8
+                    Container59_5 As groupContainer.manualLayoutContainer:
+                        AlignInContainer: =AlignInContainer.Center
+                        FillPortions: =0
+                        Height: =Parent.Height - 25
+                        LayoutMinHeight: =0
+                        LayoutMinWidth: =250
+                        Width: =25
                         ZIndex: =1
 
-                    Container3_1 As groupContainer.horizontalAutoLayoutContainer:
-                        FillPortions: =2
-                        LayoutAlignItems: =LayoutAlignItems.Center
-                        LayoutGap: =20
-                        LayoutJustifyContent: =LayoutJustifyContent.Center
-                        LayoutMinHeight: =100
-                        LayoutMinWidth: =250
-                        LayoutMode: =LayoutMode.Auto
-                        ZIndex: =2
+                        Icon2_3 As icon.ArrowLeft:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =App.Theme.Colors.Darker30
+                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                            DisabledColor: =RGBA(244, 244, 244, 1)
+                            Height: =Parent.Height
+                            Icon: =Icon.ArrowLeft
+                            Width: =Parent.Width
+                            ZIndex: =1
 
-                        Button4_1 As button:
-                            BorderColor: =RGBA(170, 163, 217, 1)
-                            Color: =App.Theme.Colors.PrimaryForeground
+                        Button11_5 As button:
+                            BorderColor: =App.Theme.Colors.Primary
+                            BorderStyle: =BorderStyle.None
+                            Color: =RGBA(0, 0, 0, 0)
                             DisabledBorderColor: =RGBA(244, 244, 244, 1)
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             DisabledFill: =RGBA(244, 244, 244, 1)
-                            Fill: =RGBA(85, 69, 191, 1)
+                            Fill: =Color.Transparent
                             Font: =App.Theme.Font
                             FontWeight: =FontWeight.Semibold
+                            Height: =Parent.Height
                             HoverBorderColor: =App.Theme.Colors.Darker10
-                            HoverColor: =App.Theme.Colors.PrimaryForeground
-                            HoverFill: =App.Theme.Colors.Darker10
-                            OnSelect: |-
-                                =UpdateContext({loading:true});SendMail.Run(record.'Email Address',"RENT APPROVAL",RichTextEditor1.HtmlText);UpdateContext({loading:false});Set(record,Blank());Set(attachments,Blank());Navigate('Home Screen',ScreenTransition.Cover)
+                            HoverFill: =Self.Fill
+                            OnSelect: =Back();
                             PressedBorderColor: =App.Theme.Colors.Darker40
                             PressedColor: =Self.Color
-                            PressedFill: =App.Theme.Colors.Darker40
+                            PressedFill: =Self.Fill
+                            RadiusBottomLeft: =0
+                            RadiusBottomRight: =0
+                            RadiusTopLeft: =0
+                            RadiusTopRight: =0
                             Size: =15
-                            Text: ="Send Mail"
-                            ZIndex: =68
+                            Text: =
+                            Width: =Parent.Width
+                            ZIndex: =2
+
+                    Label15_9 As label:
+                        BorderColor: =App.Theme.Colors.Darker40
+                        Color: =RGBA(0, 0, 0, 1)
+                        DisabledColor: =RGBA(166, 166, 166, 1)
+                        FillPortions: =1
+                        Font: =App.Theme.Font
+                        FontWeight: =FontWeight.Bold
+                        LayoutMinWidth: =0
+                        Size: =13
+                        Text: =record.'Name of Prospective Tenant'
+                        Width: =Parent.Width
+                        ZIndex: =2
+
+                Canvas1_2 As fluidGrid.fluidGridWithBlankCard:
+                    BorderThickness: =0
+                    Fill: =RGBA(255, 255, 255, 1)
+                    Height: =Parent.Height - Self.Y
+                    LayoutMinHeight: =250
+                    LayoutMinWidth: =100
+                    Width: =Parent.Width
+                    Y: =RectQuickActionBar1.Y + RectQuickActionBar1.Height
+                    ZIndex: =2
+
+                    DataCard1_2 As dataCard:
+                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderStyle: =BorderStyle.Solid
+                        BorderThickness: =0
+                        DisplayMode: =DisplayMode.Edit
+                        Fill: =RGBA(0, 0, 0, 0)
+                        Height: =Parent.Height - 100
+                        Width: =Parent.Width
+                        X: =0
+                        Y: =0
+                        ZIndex: =5
+
+                        RichTextEditor2 As richTextEditor:
+                            BorderColor: =If(IsBlank(Trim(Self.HtmlText)),Color.Red,Color.Black)
+                            Default: =""
+                            Height: =500
+                            Width: =Parent.Width - 20
+                            Y: =txt_offerLetterPlaceholder.Height
+                            ZIndex: =46
+
+                        txt_offerLetterPlaceholder As label:
+                            BorderColor: =App.Theme.Colors.Darker40
+                            Color: =RGBA(4, 4, 4, 1)//RGBA(4, 4, 4, 0.5)
+                            DisabledColor: =RGBA(166, 166, 166, 1)
+                            Font: =App.Theme.Font
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            Size: =10
+                            Text: ="Type in Offer letter here..."
+                            Width: =300
+                            ZIndex: =47
+
+                        Container7_1 As groupContainer.manualLayoutContainer:
+                            Height: =70
+                            Width: =Parent.Width
+                            Y: =RichTextEditor2.Y + RichTextEditor2.Height + 10
+                            ZIndex: =50
+
+                            sendLetter_button As button:
+                                BorderColor: =RGBA(85, 69, 191,1)
+                                DisabledBorderColor: =RGBA(244, 244, 244, 1)
+                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                Fill: =RGBA(85, 69, 191,1)
+                                FocusedBorderThickness: =2
+                                Font: =App.Theme.Font
+                                FontWeight: =FontWeight.Semibold
+                                HoverBorderColor: =RGBA(85, 69, 191,1)
+                                HoverColor: =RGBA(255, 255, 255, 1)
+                                HoverFill: =ColorFade(Self.Fill,20%)
+                                OnSelect: |-
+                                    =If(IsBlank(Trim(RichTextEditor2.HtmlText)),Notify("Please write out the offer letter in the area provided",NotificationType.Information),UpdateContext({action:"SEND OFFER"});UpdateContext({showPopUp:true}))//;
+                                PressedBorderColor: =App.Theme.Colors.Darker40
+                                PressedColor: =Self.Color
+                                PressedFill: =Self.Fill
+                                RadiusBottomLeft: =6
+                                RadiusBottomRight: =6
+                                RadiusTopLeft: =6
+                                RadiusTopRight: =6
+                                Size: =12
+                                Text: ="Send Offer Letter"
+                                X: =Parent.Width/2 -Self.Width/2
+                                Y: =Parent.Height/2 - Self.Height/2
+                                ZIndex: =52
+
+    "'POP UP_5' As 'POP UP'":
+        ActionText: =action
+        NoAction: |-
+            =UpdateContext({showPopUp:false})
+        Visible: =showPopUp
+        YesAction: |-
+            =UpdateContext({showPopUp: false});
+            UpdateContext({showLoading: true});
+            SendMail.Run(
+                record.'Name of Prospective Tenant',
+                "APPROVED",
+                record.'Email Address',
+                {text_2: RichTextEditor2.HtmlText}
+            );
+            UpdateContext({showLoading: false})
+        ZIndex: =4
+
+    TextCanvas1 As Text:
+        DisplayMode: =DisplayMode.Edit
+        Height: =70
+        Text: =RichTextEditor2.HtmlText
+        Width: =354
+        X: =40
+        Y: =40
+        ZIndex: =5
 
